# epsml

./: .gitignore  README.md  pyproject.toml
old_repos/2d-image-encoders/: .gitignore  README.md  requirements.txt
old_repos/2d-image-encoders/dino_v3/: README.md  __init__.py  dino_v3.py  pyproject.toml
old_repos/2d-image-encoders/dino_vit/: __init__.py  dino_vit.py  run_test.py
old_repos/2d-image-encoders/intern_vit/: README.md  __init__.py  intern_vit.py  multi_image_intern_vit.py  pyproject.toml  run_test.py
old_repos/2d-image-encoders/internvit/: run_test.py  run_training_on_gradient_cr_dataset.py
old_repos/2d-image-encoders/rad_dino_vit/: __init__.py  rad_dino_vit.py  run_test.py
old_repos/2d-image-encoders/requirements/: requirements.txt
old_repos/2d-image-encoders/sim_dino/: README.md
old_repos/3d-image-encoders/: .gitignore  README.md
old_repos/3d-image-encoders/i3d/: run_test.py  run_training.py  run_training_on_covid_dataset.py  run_training_on_fawkes_dataset.py
old_repos/3d-image-encoders/monai/: run_monai_test.ipynb
old_repos/3d-image-encoders/mvit/: run_training_on_ct_rate_dataset.py  run_training_on_gradient_dataset.py  trainMVitClassification.py
old_repos/3d-image-encoders/swin3d/: custom_swin_3d.py  run_training_on_fawkes_dataset.py  run_training_on_gradient_dataset.py  test_swin_3d.py
old_repos/epsclassifiers/: .gitignore  README.md  requirements.txt
old_repos/epsdatasets/: .gitignore  README.md  requirements.txt
old_repos/epsutils/: .gitignore  README.md  requirements.txt
utils/env/scripts/: setup_env.sh
(+1600 files in other folders)
