[project]
name = "2d-image-encoders"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10.12,<3.11"
dependencies = [
    "torch (>=2,<3)",
]

[project.optional-dependencies]
local-development = [
    "internvl-chat @ git+ssh://git@github.com/EpsilonLabsInc/InternVL-3x.git@v2.0.0-classifier.1#subdirectory=internvl_chat",
]
testing = [
    "utils-ml-inference @ git+ssh://git@github.com/EpsilonLabsInc/utils_ml_inference.git@v1.2.1",
]

[tool.poetry]
packages = [{include = "*"}]
exclude = ["samples/*", "run_test.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
